# but_velodyne_lib

./: .gitignore  CMakeLists.txt  README.md  but_velodyne-config-version.cmake.in  but_velodyne-config.cmake.in
include/but_velodyne/: CollarLinesRegistration.h  CollarLinesRegistrationPipeline.h  Correspondence.h  EigenUtils.h  ImageLine.h  KeypointsCorrespondenceProjector.h  KittiUtils.h  LineCloud.h  MoveEstimation.h  PointCloudLine.h  PolarGridOfClouds.h  PoseGraphEdge.h  Stopwatch.h  Termination.h  VelodynePointCloud.h  Visualizer2DCorrespondences.h  Visualizer3D.h
include/but_velodyne_odom/: CollarLinesRegistration.h  CollarLinesRegistrationPipeline.h  Correspondence.h  EigenUtils.h  ImageLine.h  KeypointsCorrespondenceProjector.h  KittiUtils.h  LineCloud.h  MoveEstimation.h  PointCloudLine.h  PolarGridOfClouds.h  PoseGraphEdge.h  Ransac.h  Stopwatch.h  Termination.h  VelodynePointCloud.h  Visualizer2DCorrespondences.h  Visualizer3D.h
scripts/: create-graph-file.sh  demo.sh  error_by_speed_histogram.py  eval-output.sh  evaluate.py  evaluate.sh  extract-vfh.sh  progress.sh  run-kitti.sh  run-self-test.sh
scripts/data/: 04-first-100-gt.txt
src/: CollarLinesRegistration.cpp  CollarLinesRegistrationPipeline.cpp  ImageLine.cpp  KeypointsCorrespondenceProjector.cpp  LineCloud.cpp  MoveEstimation.cpp  PointCloudLine.cpp  PolarGridOfClouds.cpp  PoseGraphEdge.cpp  Termination.cpp  VelodynePointCloud.cpp  Visualizer2DCorrespondences.cpp  Visualizer3D.cpp
src/apps/: collar-lines-odom.cpp  extract-vfh.cpp  find-loops-vfh.cpp  manual-calibration.cpp  register-loops.cpp  sac-visual-registration.cpp  show-kitti-poses.cpp  show_correspondences.cpp  slampp-solution-to-poses.cpp  verify-loops.cpp
